Walls of Text Pt1

--- a/toi/localisation/english/mex_l_english.yml
+++ b/toi/localisation/english/mex_l_english.yml
@@ -367,6 +367,68 @@
  MEX_focus_confirm_comonfort_desc: "Congress is too distracted observing the strict formalities of government to address anything readily or speedily. The best we can do is hurry them through the process of confirming President Comonfort's re-election by a landslide."
  MEX_focus_plan_of_tacubaya: "Plan of Tacubaya"
  MEX_focus_plan_of_tacubaya_desc: "To address the nation's woes, a convention is being organized by the Conservative Party, featuring many important national figures including former Presidents, writers, military officers, and politicians, including but not limited to President Comonfort himself. It is their hope to devise a solution to the increasing restiveness nationwide in reaction to the new Constitution. At this point any solution is preferable to chaos."
+ MEX_focus_nationalize_church_property: "Nationalize All Church Property"
+ MEX_focus_nationalize_church_property_desc: "With the betrayal of the Nation by the Catholic Church in their support for [MEC.GetLeader], the Priests and Bishops have revealed themselves to be the true enemy of the People. It is clear the approach we took in the execution of the Ley Lerdo was too slow and too piecemeal. We should begin liquidating Church property wholesale as soon as possible. How fitting that this wealth will pay to arm our Soliders so that they may defend the Nation."
+ MEX_nationalize_church_property_tt: "§GSelling Church Property will now yield more money!§!"
+ MEX_focus_civil_marriages_act: "Civil Marriages Act"
+ MEX_focus_civil_marriages_act_desc: "Since we can no longer rely on the Church to carry out any function without using it as a platform to cement their power and influence and rally against the government, we must begin making their position in society obsolete. No longer will marriages officiated only by religious officials be regarded as valid under Mexican law. For a marriage to be valid it must registered and officiated by a government magistrate. In the short term we expect this might complicate the workings of government but not for long."
+ MEX_focus_suppress_religious_holidays: "Suppress Religious Holidays"
+ MEX_focus_suppress_religious_holidays_desc: "As we continue trying to minimize Church influence in society, we must begin targeting religious holidays, and promoting secular holidays above all."
+ MEX_focus_secularize_cemetaries: "Secularize Cemetaries"
+ MEX_focus_secularize_cemetaries_desc: "Another avenue to diminish the power of the Church is removing their power over the most pressing primal fear of people. No longer will the Church have power over who can and cannot be buried on so-called holy ground, instead cemetaries will be administered by the State."
+ MEX_focus_freedom_of_religion: "Freedom Of Religion"
+ MEX_focus_freedom_of_religion_desc: "For too long have we protected the power of the Clerics by allowing them a monopoly on the faith of our Citizens. Henceforth from this day all Mexicans shall enjoy the right to practice whatever faith they choose. Though to be clear all religions must obey the same rules, which now also include a ban on ceremonies outside designated places of worship like churches or temples."
+ MEX_focus_eliminate_monastaries: "Dissolve The Monastaries"
+ MEX_focus_eliminate_monastaries_desc: "The time has come. With the complete destruction of church influence on the lives of the citizenry we can take the final step and make sure the Chruch can never rise again to the threaten the government. By dissolving the monastaries we ensure the church's welath also passes to us to fund the war they started."
+ MEX_focus_unite_the_states: "Unite The States"
+ MEX_focus_unite_the_states_desc: "With the Church defeated ideologically, we can begin uniting the Nation behind us. As we solidify the power of our Liberal Establishment, and genuinely improve people's lives, it becomes clear which side those on the fence in this war should support."
+ MEX_focus_fortify_vera_cruz: "Fortify Vera Cruz"
+ MEX_focus_fortify_vera_cruz_desc: "While Ciudad de México is in Reactionary hands, we have had to make our base, our temporary capital, in Vera Cruz; our largest Port, through which we can reach, and be reached by, the entire Mexican East Coast, as well as the Americans to the North. From here we can also block much European support from reaching the Reactionaries. It is vital that this port not fall, and therefore we must ready our defenses and fortify the city against all assault."
+ MEX_focus_seek_US_help: "Seek US Assistance"
+ MEX_focus_seek_US_help_desc: ""
+ MEX_focus_mcclane_ocampo_treaty: "McClane-Ocampo Treaty"
+ MEX_focus_mcclane_ocampo_treaty_desc: ""
+ MEX_focus_seek_european_acknowledgement: "Seek European Recognition"
+ MEX_focus_seek_european_acknowledgement_desc: ""
+ MEX_focus_call_out_state_guards: "Call Out The National Guard"
+ MEX_focus_call_out_state_guards_desc: ""
+ MEX_focus_call_on_fronterizos: "Call On The Fronterizos"
+ MEX_focus_call_on_fronterizos_desc: ""
+ MEX_focus_raise_funds_by_theft: "Funds By Theft"
+ MEX_focus_raise_funds_by_theft_desc: ""
+ MEX_focus_reform_war_conscription: "Reform War Conscription"
+ MEX_focus_reform_war_conscription_desc: ""
+
+ MEC_focus_implement_five_laws: "Implement The Five Laws"
+ MEC_focus_implement_five_laws_desc: ""
+ MEC_focus_appoint_conservative_cabinet: "Appoint a Conservative Cabinet"
+ MEC_focus_appoint_conservative_cabinet_desc: ""
+ MEC_focus_conservatives_increase_tariffs: "Increase Tariffs"
+ MEC_focus_conservatives_increase_tariffs_desc: ""
+ MEC_focus_approach_church_for_funds: "Approach Church For Funds"
+ MEC_focus_approach_church_for_funds_desc: ""
+ MEC_focus_forced_loans: "Forced Loans"
+ MEC_focus_forced_loans_desc: ""
+ MEC_focus_provisional_constitution: "A Provisional Constitution"
+ MEC_focus_provisional_constitution_desc: ""
+ MEC_focus_navidad_plan: "Plan de Navidad"
+ MEC_focus_navidad_plan_desc: ""
+ MEC_focus_raising_militias: "Raising Militias"
+ MEC_focus_raising_militias_desc: ""
+ MEC_focus_european_recognition: "Benefits Of European Recognition"
+ MEC_focus_european_recognition_desc: ""
+ MEC_focus_spanish_help: "Seek Assistance From Spain"
+ MEC_focus_spanish_help_desc: ""
+ MEC_focus_support_for_veracruz_invasion: "Support Vera Cruz Invasion"
+ MEC_focus_support_for_veracruz_invasion_desc: ""
+ MEC_focus_raise_navy: "Raise A Navy"
+ MEC_focus_raise_navy_desc: ""
+ MEC_focus_mon_almonte_treaty: "The Mon-Almonte Treaty"
+ MEC_focus_mon_almonte_treaty_desc: ""
+ MEC_focus_seek_french_monarch: "Seek a French Monarch"
+ MEC_focus_seek_french_monarch_desc: ""
+ MEC_focus_seek_spanish_monarch: "Invite The Spanish Monarch"
+ MEC_focus_seek_spanish_monarch_desc: ""
 
 
 #  MEX_the_constitution_of_1857: "The Constitution of 1857"
