--- a/toi/localisation/english/_eoanbr_equipment_l_english.yml
+++ b/toi/localisation/english/_eoanbr_equipment_l_english.yml
@@ -648,8 +648,8 @@ infantry_equipment_mg_9: "XM-250"
  tech_field_artillery_equipment_5_desc: ""
  tech_steel_RBL_artillery_equipment_1: "1865 Steel RBL Field Gun"
  tech_steel_RBL_artillery_equipment_1_desc: ""
- tech_field_armstrong_screw: "Armstrong Screw"
- tech_field_armstrong_screw_desc: "The Armstrong Screw Breech is a revolutionary addition to artillery that will finally allow us to create a breech loading artillery piece."
+ tech_field_armstrong_screw: "Wedge Breechblock"
+ tech_field_armstrong_screw_desc: "The Armstrong Screw Breech, sometimes also called a wedge breech, is a revolutionary addition to artillery that will finally allow us to create a breech loading artillery piece."
  tech_field_interrupted_screw: "Interrupted Screw"
  tech_field_interrupted_screw_desc: "The interrupted screw breech allows for a more secure closure which is also faster to actuate."
  tech_1860s_artillery_hidden_complete: "This technology requires either §G1870 Bronze RBL Field Gun§! or §G1865 Iron RML Field Gun§! to be researched."
