prelim LATIN AMERICA CULTURES and gui optimization

--- a/toi/localisation/english/_eoanbr_demographics_l_english.yml
+++ b/toi/localisation/english/_eoanbr_demographics_l_english.yml
@@ -56,7 +56,7 @@
   state_culture_name_tt_delayed: "[?v.GetCultureOwnerAcceptanceDesc]"
   state_culture_group: "[?v.GetCultureGroupName]"
   state_culture_group_tt: "§Y[?v.GetCultureGroupName]§!"
-  state_culture_group_tt_delayed: "§Y[?v.GetCultureName]§! is a Culture in the §Y[?v.GetCultureGroupName]§! Culture Group.\n\n[?v.GetCultureGroupList]"
+  state_culture_group_tt_delayed: "§Y[?v.GetCultureName]§! is a part of the §Y[?v.GetCultureGroupName]§! Culture Group and §Y[?v.GetCultureFamilyName]§! Culture Family.\n\n[?v.GetCultureGroupList]"
   state_culture_family: "[?v.GetCultureFamilyName]"
   state_culture_family_tt: "[?v.GetCultureFamilyName]"
   state_culture_family_tt_delayed: "§Y[?v.GetCultureName]§! is a Culture in the §Y[?v.GetCultureFamilyName]§! Culture Family.\n\n[?v.GetCultureFamilyList]"
@@ -81,9 +81,9 @@
   religion: "Religion"
   religion_desc: "A Religion represents a set of sacred or divine beliefs that define the worship and morality of its followers."
   religion_group: "Group"
-  religion_group_desc: "A Religion Group represents a collection of Religions who share a core set of beliefs, practices, and/or values."
+  religion_group_desc: "A Religious Family represents a collection of Religions who share a core set of beliefs, practices, and/or values."
   religion_family: "Family"
-  religion_family_desc: "A Religion Family represents a collection of Religious Groups who share a set of beliefs, practices, and/or values."
+  religion_family_desc: "A Religious Family represents a collection of Religious Groups who share a set of beliefs, practices, and/or values."
   religion_type: "Acceptance"
   religion_type_desc: "Religion Acceptance represents how influential and respected the people affiliated with said Religion are within a country's society."
   religion_type_primary: "§CPrimary§!"
@@ -132,10 +132,10 @@
   state_religion_name_tt_delayed: "[?v.GetReligionOwnerAcceptanceDesc]"
   state_religion_group: "[?v.GetReligionFamilyName]"
   state_religion_group_tt: "§Y[?v.GetReligionFamilyName]§!"
-  state_religion_group_tt_delayed: "§Y[?v.GetReligionName]§! is a pop in the §Y[?v.GetReligionFamilyName]§! Religion Group.\n\n[?v.GetReligionFamilyList]"
+  state_religion_group_tt_delayed: "§Y[?v.GetReligionName]§! is a religion in the §Y[?v.GetReligionFamilyName]§! Religious Family.\n\n[?v.GetReligionFamilyList]"
   state_religion_family: "[?v.GetReligionFamilyName]"
   state_religion_family_tt: "[?v.GetReligionFamilyName]"
-  state_religion_family_tt_delayed: "§Y[?v.GetReligionName]§! is a pop in the §Y[?v.GetReligionFamilyName]§! Religion Family.\n\n[?v.GetReligionFamilyList]"
+  state_religion_family_tt_delayed: "§Y[?v.GetReligionName]§! is a religion in the §Y[?v.GetReligionFamilyName]§! Religion Family.\n\n[?v.GetReligionFamilyList]"
   state_religion_population: "([?v.GetReligionPercentage])  —  [?v.GetReligionPopulation]"
   state_religion_population_tt: "[?v.GetReligionName] — [?v.GetReligionPrecisePopulation] ([?v.GetReligionPercentage]"
   state_religion_population_delayed: "§Y[?v.GetReligionPrecisePopulation] [?v.GetReligionName]§! live in §Y[FROM.GetName]§!, representing §Y[?v.GetReligionPercentage]§! of the total population."
