idk bro pdx goofing

--- a/toi/localisation/english/_eoanbr_demographics_l_english.yml
+++ b/toi/localisation/english/_eoanbr_demographics_l_english.yml
@@ -465,8 +465,8 @@
    culture_montubio_desc: "§HFamily:§!\n [?global.family@token:culture_montubio.GetTokenLocalizedKey]\n\n§HGroup:§!\n [?global.group@token:culture_montubio.GetTokenLocalizedKey]"
    culture_norteno: "Norteño"
    culture_norteno_desc: "§HFamily:§!\n [?global.family@token:culture_norteno.GetTokenLocalizedKey]\n\n§HGroup:§!\n [?global.group@token:culture_norteno.GetTokenLocalizedKey]"
-   culture_north_platinean: "North Plantinean"
-   culture_north_platinean_desc: "§HFamily:§!\n [?global.family@token:culture_north_platinean.GetTokenLocalizedKey]\n\n§HGroup:§!\n [?global.group@token:culture_north_platinean.GetTokenLocalizedKey]"
+   culture_platinean: "Plantinean"
+   culture_platinean_desc: "§HFamily:§!\n [?global.family@token:culture_platinean.GetTokenLocalizedKey]\n\n§HGroup:§!\n [?global.group@token:culture_platinean.GetTokenLocalizedKey]"
    culture_patagonian: "Patagonian"
    culture_patagonian_desc: "§HFamily:§!\n [?global.family@token:culture_patagonian.GetTokenLocalizedKey]\n\n§HGroup:§!\n [?global.group@token:culture_patagonian.GetTokenLocalizedKey]"
    culture_peruvian: "Peruvian"
