--- a/toi/localisation/english/decisions_l_english.yml
+++ b/toi/localisation/english/decisions_l_english.yml
@@ -906,6 +906,8 @@ NSW_New_South_Wales_Government_Railway_desc: "The Next train to arrive on Platfo
 # DEBUG EVENTS
  EOANBSYS_debug_decision_category: "Developer Debugging Commands"
  EOANBSYS_debug_decision_category_desc: "§gHere are some useful EoaNB Debugging Commands! <3§! — Vanadium"
+ debug_decision_eco_test: "Eco Test Shenanigans"
+ debug_decision_eco_test_desc: "Strat's fun times"
  debug_decision_slot_machine: "Expand Democracy"
  debug_decision_slot_machine_desc: "We are now Pegi 18"
  debug_decision_begin_armageddon: "Beginning of a New End"
