--- a/toi/localisation/english/eoanbr/modifiers_l_english.yml
+++ b/toi/localisation/english/eoanbr/modifiers_l_english.yml
@@ -1,11 +1,5 @@
 ﻿l_english:
-#Manpower
- max_manpower_modifier: "Max Manpower Modifier"
- max_manpower_factor: "Max Manpower Factor"
- monthly_manpower_modifier: "Monthly Manpower Modifier"
- monthly_manpower_factor: "Monthly Manpower Factor"
-#
-#Bureaucracy
+#Government & Politics
  bureaucracy_capacity_modifier: "Bureaucracy Capacity Modifier"
  local_bureaucracy_capacity_modifier: "Local $bureaucracy_capacity_modifier$"
  bureaucracy_capacity_factor: "Bureaucracy Capacity Factor"
@@ -14,8 +8,21 @@
  local_bureaucracy_cost_modifier: "Local $bureaucracy_cost_modifier$"
  bureaucracy_cost_factor: "Bureaucracy Cost Factor"
  local_bureaucracy_cost_factor: "Local $bureaucracy_cost_factor$"
+ ruling_coalition_support_modifier: "Ruling Coalition Support Modifier"
+ ruling_coalition_support_factor: "Ruling Coalition Support Factor"
+ opposition_coalition_support_modifier: "Opposition Coalition Support Modifier"
+ opposition_coalition_support_factor: "Opposition Coalition Support Factor"
+ #Government Reforms
+ government_constitution_unlocked_rule: "£constitution_texticon Constitutional Reform"
+ public_constitution_consciousness_modifier: "Public £constitution_texticon §YConstitution Consciousness"
+ #
+#Mobilization
+ max_manpower_modifier: "Max Manpower Modifier"
+ max_manpower_factor: "Max Manpower Factor"
+ monthly_manpower_modifier: "Monthly Manpower Modifier"
+ monthly_manpower_factor: "Monthly Manpower Factor"
 #
-#Demographics
+#Pops
  promote_culture_limit_modifier: "Promoted Culture Limit"
  promote_culture_cost_modifier: "Promote Cuture Cost Modifier"
  promote_culture_cost_factor: "Promote Culture Cost Factor"
@@ -69,10 +76,6 @@
  monthly_institution_space_colonialism_progress_modifier: "£research_speed_texticon Monthly $institution_space_colonialism$ Institution Progress"
 #
 #Coalitions
- ruling_coalition_support_modifier: "Ruling Coalition Support Modifier"
- ruling_coalition_support_factor: "Ruling Coalition Support Factor"
- opposition_coalition_support_modifier: "Opposition Coalition Support Modifier"
- opposition_coalition_support_factor: "Opposition Coalition Support Factor"
 #
 #Productivity
  productivity_throughput_factor: "Productivity Throughput Factor"
